# MEDICALRECORDS

./: CMakeLists.txt  ClassDiagram.cd  MEDICALRECORDS.sln  MEDICALRECORDS.vcxproj  MEDICALRECORDS.vcxproj.filters  MedicalRecord.cpp  MedicalRecord.h  MedicalRecordList.cpp  MedicalRecordList.h  Student.cpp  Student.h  Time.cpp  Time.h  encryptedDB.enc  enctest3  enctest3.enc  enctest3new  enctest3new.enc  main.cpp  newtest3.enc  stable.mk  stable.project  test1.json  test2.json  test3 — копия (2).json  test3.json  test3redacted.json  test4 NOT AN ARRAY DOES NOT WORK.json
.github/workflows/: c-cpp.yml
